# forunittest

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ford.yml  fpm.rsp  fpm.toml  pixi.toml  setvarsifx.bat  workspace.code-workspace
.github/workflows/: CI-CD.yml  CI_test.yml
example/: demo.f90  demo_old.f90
src/: forunittest.F90  forunittest.f90
test/: test.f90  test1.f90  test2.f90
